--- a/ConferenceSystem/Content/MyStyles.css
+++ b/ConferenceSystem/Content/MyStyles.css
@@ -61,9 +61,9 @@
         text-align: right;
     }
 
-    .form-register-with-email .form-row > label span.input-group-addon {
-        /*width: 10px;*/
-    }
+    /*.form-register-with-email .form-row > label span.input-group-addon {
+        width: 10px;
+    }*/
 
     .form-register-with-email input {
         color: #5f5f5f;
@@ -111,8 +111,8 @@
         padding: 15px 35px;
         border: 0;
         margin: 55px auto 0;
-        cursor: pointer;*/
-    }
+        cursor: pointer;
+    }*/
 
     .form-register-with-email .form-log-in-with-existing {
         text-decoration: none;
@@ -136,6 +136,7 @@
     if you don't need the form to work on mobile devices. */
 
 .loader {
+    background: white;
     margin: auto;
     border: 16px solid #f3f3f3; /* Light grey */
     border-top: 16px solid #3498db; /* Blue */
@@ -143,10 +144,6 @@
     width: 100px;
     height: 100px;
     animation: spin 2s linear infinite;
-    position: fixed;
-    top: 25%;
-    left: 45%;
-    z-index: 9999;
     /*box-shadow: 0px 0px 100px 100px white;*/
 }
 
@@ -160,8 +157,33 @@
     }
 }
 
-@media (max-width: 900px) {
+.registerinformation {
+    background: white;
+    color: #3498db;
+    margin: auto;
+    text-align: center;
+    /*box-shadow: 0px 0px 100px 100px white;*/
+}
 
+.register_updateprogress {
+    background: white;
+    border: #3498db;
+    border-width: 3px;
+    border-style: solid;
+    border-radius: 1%;
+    z-index: 9999;
+    position: fixed;
+    top: 25%;
+    left: 20%;
+    width: 60%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    box-shadow: 10px 10px 40px 10px grey;
+}
+
+@media (max-width: 900px) {
     .form-register {
         margin: 20px auto;
     }
