--- a/ConferenceSystem/Content/MyStyles.css
+++ b/ConferenceSystem/Content/MyStyles.css
@@ -358,46 +358,10 @@
     margin-bottom:5%;
 }
 
-.register-form-wrapper {
-    padding: 30px;
-    margin-top: -1px;
-    width: 70%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-@media (max-width: 1200px) {
-    .register-form-wrapper {
-        width: 80%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
-
-@media (max-width: 991px) {
-    .register-form-wrapper {
-        width: 720px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
-
-.lightblue-triangle {
-    border-color: transparent transparent lightblue transparent;
-    border-style: solid;
-    border-width: 0px 30px 30px 30px;
-    height: 0px;
-    width: 0px;
-    margin-left: 55%;
-    margin-top: -1px;
-}
-
-.lightred-triangle {
-    border-color: transparent transparent lightcoral transparent;
-    border-style: solid;
-    border-width: 0px 30px 30px 30px;
-    height: 0px;
-    width: 0px;
-    margin-left: 55%;
-    margin-top: -1px;
+.form-register-with-email .form-row > label .form-row-note {
+    font-weight: normal;
+    width: unset;
+    text-align: center;
+    padding-right: 0px;
+    margin-top: 10px;
 }
