--- a/ConferenceSystem/Content/MyStyles.css
+++ b/ConferenceSystem/Content/MyStyles.css
@@ -75,6 +75,25 @@
         border: 1px solid #dbdbdb;
     }
 
+    .dotvvm-bp-file-upload {
+        color: #5f5f5f;
+        box-sizing: border-box;
+        width: 300px;
+        box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.08);
+        padding: 12px 18px;
+        border: 1px solid #dbdbdb;
+    }
+
+    .form-register-with-email .form-row > label > .dotvvm-bp-file-upload span {
+        padding-right: 0px;
+        width: 90%;
+        text-align: center;
+    }
+
+    .form-register-with-email .form-row > label > .dotvvm-bp-file-upload > div > .bp-select-files {
+        display: none;
+    }
+
     .form-register-with-email .form-checkbox input {
         /*margin-left: 128px;*/
         margin-right: 10px;
