--- a/ConferenceSystem/Content/MyStyles.css
+++ b/ConferenceSystem/Content/MyStyles.css
@@ -56,6 +56,17 @@
         vertical-align: middle;
     }
 
+    .form-register-with-email .form-row .radio-button-left span {
+        display: inline-block;
+        box-sizing: border-box;
+        color: #5f5f5f;
+        width: 400px;
+        text-align: left;
+        padding-right: 25px;
+        vertical-align: middle;
+        margin-top: -4px;
+    }
+
     .form-register-with-email .form-row-date > label span {
         box-sizing: border-box;
         color: #5f5f5f;
@@ -105,6 +116,13 @@
         margin-left: 128px;
         margin-right: 10px;
         width: auto;
+    }
+
+    .form-register-with-email .radio-button-left input {
+        margin-left: 0px;
+        margin-right: 10px;
+        width: auto;
+        margin-top: 8px;
     }
 
     .form-register-with-email .form-row .radio-button span {
@@ -380,7 +398,7 @@
 .form-register-with-email .form-row > label .form-row-note {
     font-weight: normal;
     width: 100%;
-    text-align: right;
+    text-align: left;
     padding-right: 20px;
     margin-top: 10px;
 }
