--- a/ConferenceSystem/Content/MyStyles.css
+++ b/ConferenceSystem/Content/MyStyles.css
@@ -86,6 +86,16 @@
         border: 1px solid #dbdbdb;
     }
 
+    .form-register-with-email .dropdown {
+        color: #5f5f5f;
+        box-sizing: border-box;
+        width: 300px;
+        box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.08);
+        padding: 8px 18px;
+        border: 1px solid #dbdbdb;
+        height: 40px;
+    }
+
     .dotvvm-bp-file-upload {
         color: #5f5f5f;
         box-sizing: border-box;
